[gd_scene load_steps=8 format=3 uid="uid://diyqbmhu4pj5t"]

[ext_resource type="Script" path="res://Scenes/SessionResults/celebration_animation.gd" id="1_a8iwf"]
[ext_resource type="Texture2D" uid="uid://bypxnor18b7fy" path="res://Sprites/bubble.png" id="1_yxc67"]

[sub_resource type="Animation" id="Animation_uuy4q"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CelebrationAnimation/CPUParticles2D1:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CelebrationAnimation/CPUParticles2D1:emitting")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("CelebrationAnimation/CPUParticles2D2:emitting")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("CelebrationAnimation/CPUParticles2D2:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1200, 0)]
}

[sub_resource type="Animation" id="Animation_calo5"]
resource_name = "particles"
length = 10.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CelebrationAnimation/CPUParticles2D1:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 10),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(1600, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CelebrationAnimation/CPUParticles2D1:emitting")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("CelebrationAnimation/CPUParticles2D2:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 10),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1600, 0), Vector2(0, 0)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("CelebrationAnimation/CPUParticles2D2:emitting")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_f2xvd"]
_data = {
"RESET": SubResource("Animation_uuy4q"),
"particles": SubResource("Animation_calo5")
}

[sub_resource type="Gradient" id="Gradient_r0wqj"]
offsets = PackedFloat32Array(0, 0.149446, 0.841328, 1)
colors = PackedColorArray(0, 0, 0, 0, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 0)

[sub_resource type="Curve" id="Curve_d3cw0"]
min_value = -1.0
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(1, 1), 0.0, 0.0, 0, 0]
point_count = 2

[node name="CelebrationAnimation" type="Node"]
script = ExtResource("1_a8iwf")

[node name="ConfettiAnimation" type="AnimationPlayer" parent="."]
root_node = NodePath("../..")
libraries = {
"": SubResource("AnimationLibrary_f2xvd")
}

[node name="CPUParticles2D1" type="CPUParticles2D" parent="."]
texture_filter = 1
emitting = false
amount = 100
lifetime = 10.0
one_shot = true
texture = ExtResource("1_yxc67")
direction = Vector2(0, 1)
spread = 25.0
gravity = Vector2(0, 0)
initial_velocity_min = 50.0
initial_velocity_max = 100.0
angular_velocity_min = 82.98
angular_velocity_max = 214.77
scale_amount_min = 0.3
scale_amount_max = 0.7
color = Color(0, 1, 0.916667, 1)
color_ramp = SubResource("Gradient_r0wqj")
hue_variation_min = -1.0
hue_variation_max = 1.0
hue_variation_curve = SubResource("Curve_d3cw0")

[node name="CPUParticles2D2" type="CPUParticles2D" parent="."]
texture_filter = 1
position = Vector2(1200, 0)
emitting = false
amount = 100
lifetime = 10.0
one_shot = true
texture = ExtResource("1_yxc67")
direction = Vector2(0, 1)
spread = 25.0
gravity = Vector2(0, 0)
initial_velocity_min = 20.34
initial_velocity_max = 98.31
angular_velocity_min = 82.98
angular_velocity_max = 214.77
scale_amount_min = 0.3
scale_amount_max = 0.7
color = Color(0, 1, 0.916667, 1)
color_ramp = SubResource("Gradient_r0wqj")
hue_variation_min = -1.0
hue_variation_max = 1.0
hue_variation_curve = SubResource("Curve_d3cw0")

[connection signal="animation_finished" from="ConfettiAnimation" to="." method="_on_confetti_animation_animation_finished"]
